--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Christian Rodriguez's Personal Website">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name="author" content="Christian Rodriguez">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<link href="/css/main.min.css" rel="stylesheet">
@@ -26,13 +29,11 @@
 
 </head>
 <body class = "bg-dark">
+	<div id="canvasDiv" style="position:absolute; top:0; left:0; z-index: -1;"></div>
 	<div class="container" style="padding: 0px; margin-left: 10px; margin-right: 10px; width: 98%; max-width: 98%;">
-		<div class="row justify-content-start">
-			<div class="col-2 offset-0" style="width: 10%;">
-				<div id="canvasDiv"></div>
-			</div>
+		<div class="row justify-content-center">
 			<div class="col-10 offset-0">
-				<section id = "Hero">
+				<section id = "Hero" class = "border border-primary border-5" style="background-color: #AB84E6; width: 50%; margin-left: 25%;">
 					<h1 class = "text-light text-center" style="padding: 10px; text-shadow: 0 0 3px #E69D6A, 0 0 3px #E69D6A, 0 0 3px #E69D6A;">Christian Rodriguez</h1>
 					<h3 class="text-light text-center" style="text-shadow: 0 0 3px #AB84E6, 0 0 3px #AB84E6, 0 0 3px #AB84E6;">Game Maker</h3>
 				</section>
@@ -306,7 +307,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-3 align-self-start">
-										<img src="assets" class = "rounded mx-auto d-block" alt="A picture of my Diamond Square Demo" style="width: 200px; height: 200px;">
+										<img src="assets/personal-web-pic.png" class = "rounded mx-auto d-block" alt="A picture of my Diamond Square Demo" style="width: 200px; height: 200px;">
 									</div>
 									<div class="col-9 align-self-start">
 										<h4 class="text-dark">My Personal Website</h4>
