--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="col-10 offset-0">
 				<section id = "Hero" class = "border border-primary border-5" style="background-color: #AB84E6; width: 50%; margin-left: 25%;">
 					<h1 class = "text-light text-center" style="padding: 10px; text-shadow: 0 0 3px #E69D6A, 0 0 3px #E69D6A, 0 0 3px #E69D6A;">Christian Rodriguez</h1>
-					<h3 class="text-light text-center" style="text-shadow: 0 0 3px #AB84E6, 0 0 3px #AB84E6, 0 0 3px #AB84E6;">Game Maker</h3>
+					<h3 class="text-light text-center" style="text-shadow: 0 0 3px #77DCE6, 0 0 3px #77DCE6, 0 0 3px #77DCE6;">Game Maker</h3>
 				</section>
 				<section id = "Bio">
 					<div class="container">
@@ -318,6 +318,7 @@
 								</div>
 							</div>
 						</div>
+					</div>
 				</section>
 				<section id = "Resume" class = "rounded border border-primary border-5" style="background-color: #AB84E6;">
 					<h4 class="text-dark">Resume</h4>
