changed background colors, changed about me, added more to personal website description

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="row">
 							<div class="col align-self-start rounded border border-primary border-5" style="padding: 0;">
 								<h4 class="text-dark" style="background-color: #AB84E6; padding: 5px 10px; margin: 0;">About Me</h4>
-								<p class="text-dark" style="background-color: #AB84E6; padding: 5px 10px; margin: 0;">Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla</p>
+								<p class="text-dark" style="background-color: #AB84E6; padding: 5px 10px; margin: 0;">Hi, I am an game-developer, working mostly with 2d games. I have a background in computer science as a Sophomore at Florida Polytechnic University. While learning to code games, I tend to make small demos to test out specific systems, and have picked up some skills for making websites. I love making game for people to enjoy.</p>
 							</div>
 							<div class="col align-self-start">
 								<img src="assets/Me.jpg" class = "rounded mx-auto d-block border border-primary border-5" alt="A picture of my face" style="width: 200px; height: 200px;">
@@ -121,7 +121,7 @@
 									</div>
 									<div class="col-9 align-self-start">
 										<h4 class="text-dark">Color Hell</h4>
-										<p class="text-dark">A game about spawning and doging colorful bullets.</p>
+										<p class="text-dark">A game about spawning and dodging colorful bullets.</p>
 										<div class="p-4"></div>
 										<a class="btn btn-outline-primary" href="https://zoda39089.itch.io/color-hell">Itch.io</a>
 									</div>
@@ -155,7 +155,7 @@
 							<button class="nav-link active" id="nav-demo1-tab" data-bs-toggle="tab" data-bs-target="#nav-demo1" type="button" role="tab" aria-controls="nav-demo1" aria-selected="true">Diamond Square Algorithm</button>
 							<button class="nav-link" id="nav-demo2-tab" data-bs-toggle="tab" data-bs-target="#nav-demo2" type="button" role="tab" aria-controls="nav-demo2" aria-selected="false">Team Picker</button>
 							<button class="nav-link" id="nav-demo3-tab" data-bs-toggle="tab" data-bs-target="#nav-demo3" type="button" role="tab" aria-controls="nav-demo3" aria-selected="false">2.5 render</button>
-							<button class="nav-link" id="nav-demo4-tab" data-bs-toggle="tab" data-bs-target="#nav-demo4" type="button" role="tab" aria-controls="nav-demo4" aria-selected="false">Fishing minigame</button>
+							<button class="nav-link" id="nav-demo4-tab" data-bs-toggle="tab" data-bs-target="#nav-demo4" type="button" role="tab" aria-controls="nav-demo4" aria-selected="false">Fishing mini-game</button>
 							<button class="nav-link" id="nav-demo5-tab" data-bs-toggle="tab" data-bs-target="#nav-demo5" type="button" role="tab" aria-controls="nav-demo5" aria-selected="false">Quests</button>
 							<button class="nav-link" id="nav-demo6-tab" data-bs-toggle="tab" data-bs-target="#nav-demo6" type="button" role="tab" aria-controls="nav-demo6" aria-selected="false">Robots</button>
 							<button class="nav-link" id="nav-demo7-tab" data-bs-toggle="tab" data-bs-target="#nav-demo7" type="button" role="tab" aria-controls="nav-demo7" aria-selected="false">Chests</button>
@@ -215,11 +215,11 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-3 align-self-start">
-										<img src="assets/fishing-minigame-pic.png" class = "rounded mx-auto d-block" alt="A picture of my fishing minigame" style="width: 200px; height: 200px;">
+										<img src="assets/fishing-minigame-pic.png" class = "rounded mx-auto d-block" alt="A picture of my fishing mini-game" style="width: 200px; height: 200px;">
 									</div>
 									<div class="col-9 align-self-start">
-										<h4 class="text-dark">Fishing Minigame</h4>
-										<p class="text-dark">A demo about a fishing minigame I made in hopes of using it for Cloudy Meadows. Press E when the black line lines up with the yellow part of the circle.</p>
+										<h4 class="text-dark">Fishing Mini-Game</h4>
+										<p class="text-dark">A demo about a fishing mini-game I made in hopes of using it for Cloudy Meadows. Press E when the black line lines up with the yellow part of the circle.</p>
 										<div class="p-4"></div>
 										<a class="btn btn-outline-primary" href="https://editor.p5js.org/Zoda390/full/wzqZf2EsO">p5.js Editor</a>
 									</div>
@@ -255,7 +255,7 @@
 									</div>
 									<div class="col-9 align-self-start">
 										<h4 class="text-dark">Robots</h4>
-										<p class="text-dark">A demo about a robot sytem I created that I improved upon to make the current robot system in Cloudy Meadows.</p>
+										<p class="text-dark">A demo about a robot system I created that I improved upon to make the current robot system in Cloudy Meadows.</p>
 										<div class="p-4"></div>
 										<a class="btn btn-outline-primary" href="https://editor.p5js.org/Zoda390/full/qLsxs4IrT">p5.js Editor</a>
 									</div>
@@ -271,7 +271,7 @@
 									</div>
 									<div class="col-9 align-self-start">
 										<h4 class="text-dark">Chests</h4>
-										<p class="text-dark">A demo about a chest sytem I created that I improved upon to make the current robot system in Cloudy Meadows.</p>
+										<p class="text-dark">A demo about a chest system I created that I improved upon to make the current robot system in Cloudy Meadows.</p>
 										<div class="p-4"></div>
 										<a class="btn btn-outline-primary" href="https://editor.p5js.org/Zoda390/full/KacXagSHS">p5.js Editor</a>
 									</div>
@@ -310,11 +310,11 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-3 align-self-start">
-										<img src="assets/personal-web-pic.png" class = "rounded mx-auto d-block" alt="A picture of my Diamond Square Demo" style="width: 200px; height: 200px;">
+										<img src="assets/personal-web-pic.png" class = "rounded mx-auto d-block" alt="A picture of my website" style="width: 200px; height: 200px;">
 									</div>
 									<div class="col-9 align-self-start">
 										<h4 class="text-dark">My Personal Website</h4>
-										<p class="text-dark">A website to show off all of my skills and games.</p>
+										<p class="text-dark">A website to show off all of my skills and games. If you press wasd you can move the little plane in the top left around a procedurally generated world.</p>
 										<div class="p-3"></div>
 										<a class="btn btn-outline-primary" href="">Link</a>
 									</div>
