Added my new games to page and resume

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 					<p class="">These are all games I have made or helped with.</p>
 					<div class="container">
 						<nav class="nav nav-tabs" id="nav-tab" role="tablist">
+							<button class="nav-link" id="nav-game8-tab" data-bs-toggle="tab" data-bs-target="#nav-game8" type="button" role="tab" aria-controls="nav-game8" aria-selected="false">Greye</button>
+							<button class="nav-link" id="nav-game7-tab" data-bs-toggle="tab" data-bs-target="#nav-game7" type="button" role="tab" aria-controls="nav-game7" aria-selected="false">mushroom-game-v1</button>
+							<button class="nav-link" id="nav-game6-tab" data-bs-toggle="tab" data-bs-target="#nav-game6" type="button" role="tab" aria-controls="nav-game6" aria-selected="false">F.P.S.</button>
 							<button class="nav-link active" id="nav-game1-tab" data-bs-toggle="tab" data-bs-target="#nav-game1" type="button" role="tab" aria-controls="nav-game1" aria-selected="true">Cloudy Meadows</button>
 							<button class="nav-link" id="nav-game2-tab" data-bs-toggle="tab" data-bs-target="#nav-game2" type="button" role="tab" aria-controls="nav-game2" aria-selected="false">Love Letter Collector</button>
 							<button class="nav-link" id="nav-game3-tab" data-bs-toggle="tab" data-bs-target="#nav-game3" type="button" role="tab" aria-controls="nav-game3" aria-selected="false">Nebula Hive Mind</button>
@@ -140,6 +143,54 @@
 										<p class="">A game about flying a small plane over the ocean while avoiding the waves and birds.</p>
 										<div class="p-4"></div>
 										<a class="btn btn-outline-primary" href="https://zoda39089.itch.io/plane-game">Itch.io</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="tab-pane fade p-3" id="nav-game6" role="tabpanel" aria-labelledby="nav-game6-tab">
+							<div class="container">
+								<div class="row">
+									<div class="col-3 align-self-start">
+										<img src="assets/plane-game-pic.jpg" class = "rounded mx-auto d-block" alt="A screenshot of plane game" style="width: 200px; height: 200px;">
+									</div>
+									<div class="col-9 align-self-start">
+										<h4 class="">F.P.S - Food Plate Spoon</h4>
+										<p class="">A game about throwing tomatos, reflecting them with plates, and stabbing people with spoons.</p>
+										<div class="p-4"></div>
+										<a class="btn btn-outline-primary" href="https://virtualnerd1.itch.io/fps-food-plate-spoon">Itch.io</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="tab-pane fade p-3" id="nav-game7" role="tabpanel" aria-labelledby="nav-game7-tab">
+							<div class="container">
+								<div class="row">
+									<div class="col-3 align-self-start">
+										<img src="assets/Mushroom_game_v1_pic.png" class = "rounded mx-auto d-block" alt="A screenshot of plane game" style="width: 200px; height: 200px;">
+									</div>
+									<div class="col-9 align-self-start">
+										<h4 class="">Mushroom Game v1</h4>
+										<p class="">A topdown 2.5D minecraft clone in which you control a small mushroom.</p>
+										<div class="p-4"></div>
+										<a class="btn btn-outline-primary" href="https://zoda39089.itch.io/mushroom-game-v1">Itch.io</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						
+						<div class="tab-pane fade p-3" id="nav-game8" role="tabpanel" aria-labelledby="nav-game8-tab">
+							<div class="container">
+								<div class="row">
+									<div class="col-3 align-self-start">
+										<img src="assets/Greye-pic.png" class = "rounded mx-auto d-block" alt="A screenshot of plane game" style="width: 200px; height: 200px;">
+									</div>
+									<div class="col-9 align-self-start">
+										<h4 class="">Greye</h4>
+										<p class="">A game about killing all kinds of creatures and stealing their eyes to better see the world around you.</p>
+										<div class="p-4"></div>
+										<a class="btn btn-outline-primary" href="https://zoda39089.itch.io/greye">Itch.io</a>
 									</div>
 								</div>
 							</div>
