--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </head>
-<body id = "body" class = "bg-dark text-dark">
+<body id = "body" class = "bg-dark text-dark" style="overflow: hidden;">
 	<div id="canvasDiv" style="position:absolute; top:0; left:0; z-index: -1;"></div>
 
 	<div class="hb1">
@@ -33,25 +33,27 @@
 		<button class="btn btn-outline-primary btn-lg" onclick="showDiv('SocialsDiv')">Socials</button>
 	</div>
 
-	<div class="smallCenterDiv" id="CoverDiv">
-		<main style="margin-top: 20px;">
-			<h1>Christian Rodriguez</h1>
-			<h5 class="text-primary">Aka Zoda390</h5>
-		</main>
-		<p style="width: 75%; margin-left: 12.5%;" id="AboutMeDesc">Loading...</p>
-		<a class="btn btn-outline-secondary btn-lg" style="width:25%; margin-left: 37.5%; margin-bottom: 20px;">Resume</a>
-	</div>
-
-	<div class="bigCenterDiv" id="ProjectsDiv" style="display: none;">
-		<main>
-			<h1>Projects</h1>
-		</main>
-	</div>
-
-	<div class="smallCenterDiv" id="SocialsDiv" style="display: none;">
-		<main>
-			<h1>Socials</h1>
-		</main>
+	<div class="centerHorizontally">
+		<div class="smallCenterDiv" id="CoverDiv">
+			<main style="margin-top: 20px;">
+				<h1>Christian Rodriguez</h1>
+				<h5 class="text-primary">Aka Zoda390</h5>
+			</main>
+			<p style="width: 75%; margin-left: 12.5%;" id="AboutMeDesc">Loading...</p>
+			<a class="btn btn-outline-secondary btn-lg" style="width:25%; margin-left: 37.5%; margin-bottom: 20px;">Resume</a>
+		</div>
+	
+		<div class="bigCenterDiv" id="ProjectsDiv" style="display: none;">
+			<main>
+				<h1>Projects</h1>
+			</main>
+		</div>
+	
+		<div class="smallCenterDiv" id="SocialsDiv" style="display: none;">
+			<main>
+				<h1>Socials</h1>
+			</main>
+		</div>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
