--- a/index.html
+++ b/index.html
@@ -39,19 +39,29 @@
 				<h1>Christian Rodriguez</h1>
 				<h5 class="text-primary">Aka Zoda390</h5>
 			</main>
-			<p style="width: 75%; margin-left: 12.5%;" id="AboutMeDesc">Loading...</p>
-			<a class="btn btn-outline-secondary btn-lg" style="width:25%; margin-left: 37.5%; margin-bottom: 20px;">Resume</a>
+			<p style="width: 75%; margin: auto; min-width: 360; padding-bottom: 10px;" id="AboutMeDesc">Loading...</p>
+			<a class="btn btn-outline-secondary btn-lg" style="width:25%; margin: auto; margin-bottom: 10px; min-width: 100px;">Resume</a>
 		</div>
 	
 		<div class="bigCenterDiv" id="ProjectsDiv" style="display: none;">
-			<main>
+			<main style="margin-top: 10px;">
 				<h1>Projects</h1>
 			</main>
 		</div>
 	
 		<div class="smallCenterDiv" id="SocialsDiv" style="display: none;">
-			<main>
+			<main style="margin-top: 20px;">
 				<h1>Socials</h1>
+				<div class="container text-center">
+					<div class="row row-cols-3">
+						<div class="col"><a class="my-btn btn btn-outline-gray" href="https://github.com/Zoda390">Github</a></div>
+						<div class="col"><a class="my-btn btn btn-outline-danger" href="https://zoda39089.itch.io/">Itch</a></div>
+						<div class="col"><a class="my-btn btn btn-outline-primary" href="https://www.reddit.com/user/Time_Program5298/submitted/">Reddit</a></div>
+						<div class="col"><a class="my-btn btn btn-outline-info" href="https://www.linkedin.com/in/christian-rodriguez-265220228/">Linkedin</a></div>
+						<div class="col"><a class="my-btn btn btn-outline-pink" href="https://www.instagram.com/skelly_zoda390/">Insta</a></div>
+						<div class="col"><a class="my-btn btn btn-outline-secondary" href="https://www.twitch.tv/zoda390">Twitch</a></div>
+					</div>
+				</div>
 			</main>
 		</div>
 	</div>
