--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="websiteStuff.js"></script>
 	<script type="text/javascript" src="sketch.js"></script>
 	
+	<script src="https://kit.fontawesome.com/95272207ae.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
@@ -29,7 +30,7 @@
 
 	<div class="hb1">
 		<button class="btn btn-outline-primary btn-lg" onclick="showDiv('CoverDiv')">About Me</button>
-		<button class="btn btn-outline-secondary btn-lg" onclick="showDiv('ProjectsDiv')">Projects</button>
+		<button class="btn btn-outline-primary btn-lg" onclick="showDiv('ProjectsDiv')">Projects</button>
 		<button class="btn btn-outline-primary btn-lg" onclick="showDiv('SocialsDiv')">Socials</button>
 	</div>
 
@@ -40,7 +41,7 @@
 				<h5 class="text-primary">Aka Zoda390</h5>
 			</main>
 			<p style="width: 75%; margin: auto; min-width: 360; padding-bottom: 10px;" id="AboutMeDesc">Loading...</p>
-			<a class="btn btn-outline-secondary btn-lg" style="width:25%; margin: auto; margin-bottom: 10px; min-width: 100px;">Resume</a>
+			<a class="btn btn-outline-secondary btn-lg" style="width:25%; margin: auto; margin-bottom: 10px; min-width: 100px;" href='assets/Resume.pdf' target="_blank">Resume</a>
 		</div>
 	
 		<div class="bigCenterDiv" id="ProjectsDiv" style="display: none;">
@@ -110,12 +111,12 @@
 				<h1>Socials</h1>
 				<div class="container text-center">
 					<div class="row row-cols-3">
-						<div class="col"><a class="my-btn btn btn-outline-gray" href="https://github.com/Zoda390">Github</a></div>
-						<div class="col"><a class="my-btn btn btn-outline-danger" href="https://zoda39089.itch.io/">Itch</a></div>
-						<div class="col"><a class="my-btn btn btn-outline-primary" href="https://www.reddit.com/user/Time_Program5298/submitted/">Reddit</a></div>
-						<div class="col"><a class="my-btn btn btn-outline-info" href="https://www.linkedin.com/in/christian-rodriguez-265220228/">Linkedin</a></div>
-						<div class="col"><a class="my-btn btn btn-outline-pink" href="https://www.instagram.com/skelly_zoda390/">Insta</a></div>
-						<div class="col"><a class="my-btn btn btn-outline-secondary" href="https://www.twitch.tv/zoda390">Twitch</a></div>
+						<div class="col"><a class="my-btn btn btn-outline-light" href="https://github.com/Zoda390"><i class="fa-brands fa-github"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-danger" href="https://zoda39089.itch.io/"><i class="fa-brands fa-itch-io"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-primary" href="https://www.reddit.com/user/Time_Program5298/submitted/"><i class="fa-brands fa-reddit"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-info" href="https://www.linkedin.com/in/christian-rodriguez-265220228/"><i class="fa-brands fa-linkedin"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-pink" href="https://www.instagram.com/skelly_zoda390/"><i class="fa-brands fa-instagram"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-secondary" href="https://www.twitch.tv/zoda390"><i class="fa-brands fa-twitch"></i></a></div>
 					</div>
 				</div>
 			</main>
