--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 				<h1>Socials</h1>
 				<div class="container text-center">
 					<div class="row row-cols-3">
-						<div class="col"><a class="my-btn btn btn-outline-light" href="https://github.com/Zoda390"><i class="fa-brands fa-github"></i></a></div>
-						<div class="col"><a class="my-btn btn btn-outline-danger" href="https://zoda39089.itch.io/"><i class="fa-brands fa-itch-io"></i></a></div>
-						<div class="col"><a class="my-btn btn btn-outline-primary" href="https://www.reddit.com/user/Time_Program5298/submitted/"><i class="fa-brands fa-reddit"></i></a></div>
-						<div class="col"><a class="my-btn btn btn-outline-info" href="https://www.linkedin.com/in/christian-rodriguez-265220228/"><i class="fa-brands fa-linkedin"></i></a></div>
-						<div class="col"><a class="my-btn btn btn-outline-pink" href="https://www.instagram.com/skelly_zoda390/"><i class="fa-brands fa-instagram"></i></a></div>
-						<div class="col"><a class="my-btn btn btn-outline-secondary" href="https://www.twitch.tv/zoda390"><i class="fa-brands fa-twitch"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-light" href="https://github.com/Zoda390"><i class="fa-xl fa-brands fa-github"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-danger" href="https://zoda39089.itch.io/"><i class="fa-xl fa-brands fa-itch-io"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-primary" href="https://www.reddit.com/user/Time_Program5298/submitted/"><i class="fa-xl fa-brands fa-reddit"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-info" href="https://www.linkedin.com/in/christian-rodriguez-265220228/"><i class="fa-xl fa-brands fa-linkedin"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-pink" href="https://www.instagram.com/skelly_zoda390/"><i class="fa-xl fa-brands fa-instagram"></i></a></div>
+						<div class="col"><a class="my-btn btn btn-outline-secondary" href="https://www.twitch.tv/zoda390"><i class="fa-xl fa-brands fa-twitch"></i></a></div>
 					</div>
 				</div>
 			</main>
